--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -200,7 +200,7 @@ video {
 
 .content figure {
     float: left;
-    margin: 2em 2em 0 0;
+    margin: 1em 2em 2em 0;
     width: 400px;
 }
 
@@ -242,4 +242,6 @@ video {
     display: none;
 }
 
-
+.producers {
+  clear:both;
+}
