separate out css for general layout and gridgin content (base.css and grid.css). Change layout structure to make use of hugo lookup order for ec_stories. add auto video resizing to posts. add hero to ec_stories.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -84,7 +84,7 @@
 <main class="wrapper">
 <div class="{{ if .IsHome }}full-height{{ end }}", style = "{{ if .IsHome }}background-image: url({{"images/city.jpg" | absURL}}){{end}}";>
       {{ partial "header.html" . }}
-  {{ if and (.IsPage) (isset .Params "image") }}
+  {{ if (isset .Params "image") }}
      {{ partial "head_hero.html" . }}
   {{ end }}
       <div class="content">
