--- a/layouts/partials/post_grid.html
+++ b/layouts/partials/post_grid.html
@@ -1,14 +1,14 @@
 <div class = "post-grid">
   {{ range .Paginator.Pages }}
   <a class="title" href="{{ .Params.ExternalLink | default .RelPermalink }}">
-  <div class = "post-image lr" style = "background-image: linear-gradient(
+  <div class = "post-image" style = "background-image: linear-gradient(
       rgba(0, 0, 0, 0.1),
       rgba(0, 0, 0, 0.1)
     ), url({{ .Params.image | absURL }})">
     
       
-        <img src = "/images/play_icon.png" width = "85">
-        <h4><b>{{ upper .Title }}</b></h4>
+        <img class = "gi" src = "/images/play_icon.png" width = "85">
+        <h4 class = "gt"><b>{{ upper .Title }}</b></h4>
     
   </div>
   </a>
