--- a/layouts/partials/list.html
+++ b/layouts/partials/list.html
@@ -1,13 +1,19 @@
 <section class="container list">
-  <h1>
+  <h1 class="title">
     {{- if eq .Kind "taxonomy" -}}
       {{- i18n .Data.Singular | title -}}
       {{- print ": " -}}
     {{- end -}}
 
     {{- .Title -}}
-</h1>
-{{ .Content }}
-  {{ partial "post_grid.html" .}}
+  </h1>
+  <ul>
+    {{ range .Paginator.Pages }}
+    <li>
+      <span class="date">{{ .Date.Format (.Site.Params.dateFormat | default "January 2, 2006" ) }}</span>
+      <a class="title" href="{{ .Params.ExternalLink | default .RelPermalink }}">{{ .Title }}</a>
+    </li>
+    {{ end }}
+  </ul>
   {{ partial "pagination.html" . }}
 </section>
