--- a/layouts/partials/home_edit.html
+++ b/layouts/partials/home_edit.html
@@ -5,6 +5,9 @@
     {{ with .Site.Params.avatarurl }}
       <div class="avatar"><img src="{{ . | relURL }}" alt="avatar"></div>
     {{ end }}
+    <h1>  {{ range first 5 (where .Data.Pages "Section" "in" (slice "ec_stories" "authors")) }}
+	{{ .Title }}
+{{ end }}</h1>
     <h1>{{ .Site.Params.author }}</h1>
     <h2>{{ .Site.Params.info | markdownify }}</h2>
     {{ with .Site.Params.social }}
