--- a/layouts/partials/head_hero.html
+++ b/layouts/partials/head_hero.html
@@ -9,7 +9,8 @@
  width: 100vw;
  position: relative;
  margin-left: -50vw;
- height: 50vh;
+/* height: 50vh; */
+height:225px;
  left: 50%;
 /* Create the parallax scrolling effect */
    background-position: center;
