--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,13 +19,14 @@ nav {
     box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
 
+.sea-head {
+    box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
+}
+
 .full-height nav {
     box-shadow: 0 0 0 0 rgba(0,0,0,0);
 }
 
-.content {
-
-}
 
 .row-full{
  width: 100vw;
@@ -142,6 +143,7 @@ body, html {
 .full-height h1, .full-height h2 {
     text-shadow: 2px 2px #000000;
 }
+
 .sea-head {
     background-color: #e5f4fa;
     width: 100%;
@@ -152,6 +154,9 @@ body, html {
     background-color: transparent;
 }
 
+.wrapper {
+  background-color: #e5f4fa;
+}
 
 
 
@@ -209,3 +214,15 @@ video {
 .producers {
   clear:both;
 }
+
+.partition { 
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border: 1px solid rgba(0,0,0,0.1);
+  background-color: #e5f4fa;
+} 
+
