--- a/layouts/partials/head_hero.html
+++ b/layouts/partials/head_hero.html
@@ -10,7 +10,7 @@
  position: relative;
  margin-left: -50vw;
 /* height: 50vh; */
-height:225px;
+height:300px;
  left: 50%;
 /* Create the parallax scrolling effect */
    background-position: center;
@@ -35,6 +35,9 @@ height:225px;
 <div class="hero-image">
   <div class="hero-text">
     <h1>{{ .Title }}</h1>
+    {{ if isset .Params "subtitle" }}
+      <h3>{{ .Params.subtitle }}</h3>
+    {{ end }}
   </div>
   </div>
   {{ end }}
