--- a/layouts/partials/home_edit.html
+++ b/layouts/partials/home_edit.html
@@ -1,31 +1,11 @@
-<section class="container centered">
-
-  
-  <div class="about">
-    {{ with .Site.Params.avatarurl }}
-      <div class="avatar"><img src="{{ . | relURL }}" alt="avatar"></div>
+<section class="container page">
+  <article>
+    {{ if not (isset .Params "image") }} 
+      <header>
+      <h1>{{ .Title }}</h1>
+    </header>
     {{ end }}
-    <h1>  {{ range first 5 (where .Data.Pages "Section" "in" (slice "ec_stories" "authors")) }}
-	{{ .Title }}
-{{ end }}</h1>
-    <h1>{{ .Site.Params.author }}</h1>
-    <h2>{{ .Site.Params.info | markdownify }}</h2>
-    {{ with .Site.Params.social }}
-    <ul>
-      {{ range sort .}}
-        {{ if .icon }}
-          <li>
-            <a href="{{ .url }}" aria-label="{{ .name }}" {{ if .rel }}rel="{{ .rel }}"{{ end }}>
-              <i class="{{ .icon }}" aria-hidden="true"></i>
-            </a>
-          </li>
-        {{ else }}
-          <li>
-            <a href="{{ .url }}" aria-label="{{ .name }}" {{ if .rel }}rel="{{ .rel }}"{{ end }}>{{ .name }}</a>
-          </li>
-        {{ end }}
-      {{ end }}
-    </ul>
-    {{ end }}
-  </div>
+    
+    {{ .Content }}
+  </article>
 </section>
