--- a/public/css/base.css
+++ b/public/css/base.css
@@ -23,9 +23,7 @@ nav {
     box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
 
-.full-height nav {
-    box-shadow: 0 0 0 0 rgba(0,0,0,0);
-}
+
 
 
 .row-full{
@@ -136,13 +134,7 @@ body, html {
     
 }
 
-.full-height h1, .full-height h2, .full-height a {
-    color: #ffffff;
 
-}
-.full-height h1, .full-height h2 {
-    text-shadow: 2px 2px #000000;
-}
 
 .sea-head {
     background-color: #e5f4fa;
@@ -155,7 +147,7 @@ body, html {
 }
 
 .wrapper {
-  background-color: #e5f4fa;
+  background-color: #fff;
 }
 
 
@@ -217,10 +209,7 @@ video {
 
 .partition { 
   display: block;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto 0 auto;
   border-style: inset;
   border: 1px solid rgba(0,0,0,0.1);
   background-color: #e5f4fa;
