--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -6,17 +6,20 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  
+  padding: 0 20px 0 20px;
 }
 
-.hero-text h1 {
+.hero-text h1, .hero-text h3 {
     color: white;
     text-shadow: 1px 1px 3px #000;
-    font-size: 300%
+
 	       
 }
-
-
+.hero-text h1 {
+  font-size: 400%;
+  line-height: 1em;
+}
+    
 
 .cont {
   width: 100%;
