--- a/layouts/partials/home_edit.html
+++ b/layouts/partials/home_edit.html
@@ -7,5 +7,21 @@
     {{ end }}
     
     {{ .Content }}
+    
+    <div class = "post-grid">
+      {{range sort (where .Site.Pages "Params.feature" "!=" nil) "Params.feature"}}
+        <a class="title" href="{{ .Params.ExternalLink | default .RelPermalink }}">
+        <div class = "post-image front" style = "background-image: url({{ .Params.image | absURL }}">
+    <div class = "post-text">
+        <span class = "front-narrow">
+        <h4 class = "gt front"><b>{{ upper .Title }}</b></h4>
+        <h4 class = "gt front" stlye = "padding-top:10px">{{ .Params.tagline }}</h4>
+        </span>
+    </div>
+    </div>
+  </a>
+  {{ end }}
+  </div>
+
   </article>
 </section>
