--- a/layouts/partials/page_ec_stories.html
+++ b/layouts/partials/page_ec_stories.html
@@ -5,6 +5,8 @@
       <h1 class = "title">{{ .Title }}</h1>
 {{ end }}
 
+<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ .Params.radio_id }}&color=%23aa483f&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false&download=true&show_artwork=false"></iframe>
+
 {{ .Content }}
 
 </article>
@@ -28,7 +30,5 @@
 {{ end }}
 {{ end }}
 </div>
-
-
 
 </section>
