--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -20,6 +20,14 @@
     width: 266px;
 }
 
+.post-image.front {
+  height: 400px;
+}
+@media only screen and (max-width:768px) {
+.post-image.front {
+  height: 200px;
+}
+}
 @media only screen and (max-width:768px) {
   .post-image {
     width: 100%;
@@ -30,10 +38,37 @@
 
 .gt{
   position: relative;
-  padding: 10px 20px 20px 20px;
+  margin: 30px 20px 10px 20px;
   color: white;
-  margin: 0px;
   bottom: 0;
+}
+
+.gt.front {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.front-narrow {
+  position: absolute;
+  bottom: 200;
+  right: 0;
+}
+
+@media only screen and (max-width:768px) {
+.front-narrow {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.4)
+}
+}
+
+@media only screen and (max-width:768px) {
+.gt.front {
+  margin-top: 10px;
+  margin-bottom:10px;
+  text-align: left;
+}
 }
 
 .gi{
@@ -55,3 +90,26 @@
 .post-image:hover .summary {
     display: none;
 }
+
+.post-text {
+  position: relative;
+  bottom: -225px;
+  right: 0px;
+  background-color: rgba(0,0,0,0.4);
+  color: white;
+  padding-left: 0px;
+  padding-right: 0px;
+  height: 175px;
+}
+
+@media only screen and (max-width:768px) {
+.post-text {
+  height: 100px;
+  bottom: -100px;
+  background-color: transparent;
+}
+}
+
+
+
+
