--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,12 @@ body {
     color: #bdbdbd
 }
 
+.navigation a, .navigation span {
+  line-height:4.5rem;
+  color: white;
+  font-weight:normal;
+}
+
 nav {
     box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
@@ -23,7 +29,9 @@ nav {
     box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
 }
 
-
+.navigation span {
+  color: white;
+}
 
 
 .row-full{
@@ -89,8 +97,9 @@ body, html {
 }
 
 .navigation{
-    height:6rem;
+    height:4.5rem;
     width:100%;
+    background-color:#004781;
 }
 
 .page_title{
@@ -127,7 +136,6 @@ body, html {
 }
 
 .full-height {
-    height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
