updated stylesheets to include w3 and added taglines to stories

--- a/layouts/partials/post_grid.html
+++ b/layouts/partials/post_grid.html
@@ -9,6 +9,9 @@
       
         <img class = "gi" src = "/images/play_icon.png" width = "85">
         <h4 class = "gt"><b>{{ upper .Title }}</b></h4>
+        <div class="w3-animate-opacity summary">
+        <h4 class = "gt summary">{{ .Params.tagline }}</h4>
+        </div>
     
   </div>
   </a>
