--- a/static/css/base.css
+++ b/static/css/base.css
@@ -159,6 +159,18 @@ body, html {
 }
 
 
+@media only screen and (max-width: 768px) {
+.navigation .menu-button {
+  line-height: 4.5rem;
+    color: white;
+}
+}
+
+@media only screen and (max-width: 768px){
+.navigation-item a{
+  color: black;
+}
+}
 
 
 video {
