--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -70,8 +70,7 @@
       <script src="{{ . | relURL }}"></script>
     {{ end }}
     
-    <link rel="icon" type="image/png" href="{{ .Site.Params.favicon_32 | default "/images/favicon-32x32.png" | absURL }}" sizes="32x32">
-    <link rel="icon" type="image/png" href="{{ .Site.Params.favicon_16 | default "/images/favicon-16x16.png" | absURL }}" sizes="16x16">
+    <link rel="shortcut icon" href="https://www.sea.edu/favicon.ico" type="image/x-icon">
 
     {{ range .AlternativeOutputFormats -}}
       {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
