try and sort relULR issue

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -82,7 +82,7 @@
   <body class="{{ if .Site.Params.rtl }}rtl{{ end }} {{ if .Site.Params.inverted }}inverted{{ end }}">
 {{ partial "head_sea.html" . }}
 <main class="wrapper">
-<div class="{{ if .IsHome }}full-height{{ end }}", style = "{{ if .IsHome }}background-image: url({{ .Site.Params.background_image | absURL}}){{end}}";>
+<div class="{{ if .IsHome }}full-height{{ end }}" style = "{{ if .IsHome }}background-image: url({{ .Site.Params.background_image | absURL}}){{end}}">
       {{ partial "header.html" . }}
   {{ if (isset .Params "image") }}
      {{ partial "head_hero.html" . }}
