--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
 
 <section class="container">
 
-    <a class="navigation-title" href="{{ .Site.BaseURL | relLangURL }}">
+    <a class="navigation-title" href="{{ .Site.BaseURL | relURL }}">
       {{ .Site.Title }}
     </a>
     <input type="checkbox" id="menu-toggle" />
@@ -12,7 +12,7 @@
       {{ with .Site.Menus.main}}
         {{ range sort . }}
           <li class="navigation-item">
-            <a class="navigation-link" href="{{ .URL | absLangURL }}">{{ .Name }}</a>
+            <a class="navigation-link" href="{{ .URL | absURL }}">{{ .Name }}</a>
           </li>
         {{ end }}
       {{ end }}
