--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -83,6 +83,7 @@
     display: block;
 }
 
+
 .summary {
   display: none;
 }
@@ -90,6 +91,12 @@
 .post-image:hover .summary {
     display: block;
 }
+
+@media only screen and (max-width:768px) {
+  .summary {
+    display: block;
+  }
+  }
 
 .post-text {
   position: relative;
